// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation collapses successfully at 2nd level 1`] = `
<DocumentFragment>
  .emotion-26 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-20 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-23 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-23:visited {
  color: #903D91;
}

.emotion-23:hover {
  color: #2F75D7;
}

.emotion-23:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-26"
    role="navigation"
  >
    <ul
      class="emotion-20"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-20"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <div
              class="emotion-1"
              data-testid="/utils/code-helpers"
              tabindex="0"
            >
              Code Helpers
              <svg
                class="emotion-0"
                viewBox="0 0 16 16"
              >
                <title>
                  close icon
                </title>
                <g
                  fill="none"
                >
                  <mask
                    fill="white"
                  >
                    <polygon
                      points="7 10 12 15 17 10"
                    />
                  </mask>
                  <polygon
                    fill="#666"
                    points="7 10 12 15 17 10"
                  />
                </g>
              </svg>
            </div>
          </li>
        </ul>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-23"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders as expected 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-21 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-19 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-19:visited {
  color: #903D91;
}

.emotion-19:hover {
  color: #2F75D7;
}

.emotion-19:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-21"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-19"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders correctly without given path 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-21 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-19 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-19:visited {
  color: #903D91;
}

.emotion-19:hover {
  color: #2F75D7;
}

.emotion-19:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-21"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-19"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on theming page after click guides menu collapses 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-21 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-19 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-19:visited {
  color: #903D91;
}

.emotion-19:hover {
  color: #2F75D7;
}

.emotion-19:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-21"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-19"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on theming page after enter key guides menu collapses 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-21 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-19 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-19:visited {
  color: #903D91;
}

.emotion-19:hover {
  color: #2F75D7;
}

.emotion-19:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-21"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-19"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on theming page by clicking on components menu, guides menu collapses and components menu expands 1`] = `
<DocumentFragment>
  .emotion-74 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-62 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-12 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-12:visited {
  color: #903D91;
}

.emotion-12:hover {
  color: #2F75D7;
}

.emotion-12:active {
  color: #2F75D7;
}

.emotion-10 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #01396E;
  cursor: pointer;
  font-weight: 500;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-10:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-10:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-10:focus svg polygon {
  fill: #ffffff;
}

.emotion-10 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-10 a:visited {
  color: #0a0a0a;
}

<nav
    aria-label="Sidebar"
    class="emotion-74"
    role="navigation"
  >
    <ul
      class="emotion-62"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-10"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-62"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/tag"
            >
              <div
                class="emotion-1"
                data-testid="/components/tag"
                tabindex="-1"
              >
                Tag
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/link"
            >
              <div
                class="emotion-1"
                data-testid="/components/link"
                tabindex="-1"
              >
                Link
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/article-byline"
            >
              <div
                class="emotion-1"
                data-testid="/components/article-byline"
                tabindex="-1"
              >
                ArticleByline
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/date-line"
            >
              <div
                class="emotion-1"
                data-testid="/components/date-line"
                tabindex="-1"
              >
                Date Line
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/divider"
            >
              <div
                class="emotion-1"
                data-testid="/components/divider"
                tabindex="-1"
              >
                Divider
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/button"
            >
              <div
                class="emotion-1"
                data-testid="/components/button"
                tabindex="-1"
              >
                Button
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/consent"
            >
              <div
                class="emotion-1"
                data-testid="/components/consent"
                tabindex="-1"
              >
                Consent
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/consent-settings-link"
            >
              <div
                class="emotion-1"
                data-testid="/components/consent-settings-link"
                tabindex="-1"
              >
                Consent Settings Link
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/tag-list"
            >
              <div
                class="emotion-1"
                data-testid="/components/tag-list"
                tabindex="-1"
              >
                TagList
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/title-bar"
            >
              <div
                class="emotion-1"
                data-testid="/components/title-bar"
                tabindex="-1"
              >
                Title Bar
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/grid"
            >
              <div
                class="emotion-1"
                data-testid="/components/grid"
                tabindex="-1"
              >
                Grid & Cell
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/ordered-list"
            >
              <div
                class="emotion-1"
                data-testid="/components/ordered-list"
                tabindex="-1"
              >
                OrderedList
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/unordered-list"
            >
              <div
                class="emotion-1"
                data-testid="/components/unordered-list"
                tabindex="-1"
              >
                UnorderedList
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/share-bar"
            >
              <div
                class="emotion-1"
                data-testid="/components/share-bar"
                tabindex="-1"
              >
                ShareBar
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/consent"
            >
              <div
                class="emotion-1"
                data-testid="/components/consent"
                tabindex="-1"
              >
                Consent
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/consent-settings-link"
            >
              <div
                class="emotion-1"
                data-testid="/components/consent-settings-link"
                tabindex="-1"
              >
                ConsentSettingsLink
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-12"
              href="/components/button"
            >
              <div
                class="emotion-1"
                data-testid="/components/button"
                tabindex="-1"
              >
                Unordered List
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <a
          class="emotion-12"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on theming page renders as expected 1`] = `
<DocumentFragment>
  .emotion-36 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-4 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-4 .emotion-4,
.emotion-4 .emotion-4 .emotion-4 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #777777;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #E5F3FF;
}

.emotion-1:focus {
  outline: none;
  color: #ffffff;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #ffffff;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  display: inline-block;
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-3 {
  color: #2F75D7;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
}

.emotion-3:visited {
  color: #903D91;
}

.emotion-3:hover {
  color: #2F75D7;
}

.emotion-3:active {
  color: #2F75D7;
}

<nav
    aria-label="Sidebar"
    class="emotion-36"
    role="navigation"
  >
    <ul
      class="emotion-8"
      role="list"
    >
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/guides"
          tabindex="0"
        >
          Getting Started
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-8"
          role="list"
        >
          <li
            class="emotion-4"
          >
            <a
              class="emotion-3"
              href="/guides/getting-started-amp"
            >
              <div
                class="emotion-1"
                data-testid="/guides/getting-started-amp"
                tabindex="-1"
              >
                AMP
              </div>
            </a>
          </li>
          <li
            class="emotion-4"
          >
            <a
              class="emotion-3"
              href="/guides/getting-started-instrumentation"
            >
              <div
                class="emotion-1"
                data-testid="/guides/getting-started-instrumentation"
                tabindex="-1"
              >
                Instrumentation
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/theming"
          tabindex="0"
        >
          Theming
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-8"
          role="list"
        >
          <li
            class="emotion-4"
          >
            <a
              class="emotion-3"
              href="/theming/overview"
            >
              <div
                class="emotion-1"
                data-testid="/theming/overview"
                tabindex="-1"
              >
                Overview
              </div>
            </a>
          </li>
          <li
            class="emotion-4"
          >
            <a
              class="emotion-3"
              href="/theming/code"
            >
              <div
                class="emotion-1"
                data-testid="/theming/code"
                tabindex="-1"
              >
                Code
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/foundations"
          tabindex="0"
        >
          Foundations
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/components"
          tabindex="0"
        >
          Components
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/pages"
          tabindex="0"
        >
          Pages
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/utils"
          tabindex="0"
        >
          Utilities
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-4"
      >
        <a
          class="emotion-3"
          href="/feedback"
        >
          <div
            class="emotion-1"
            data-testid="/feedback"
            tabindex="-1"
          >
            Feedback
          </div>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
